--- a/src/agents/enhancer_agent.ipynb
+++ b/src/agents/enhancer_agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "94714258",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "594a8f4f",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a1b71878",
    "metadata": {},
    "outputs": [
@@ -65,10 +65,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "ba47942e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# -- Enhancer Agent --\n",
     "# This script sets up an agent that enhances queries by extracting structured metadata and filters.\n",
@@ -82,24 +93,19 @@
     "from langgraph.prebuilt import ToolNode\n",
     "from langgraph.types import Command\n",
     "from typing import Literal\n",
-    "from langchain_openai import ChatOpenAI\n",
-    "from langchain.prompts import PromptTemplate\n"
+    "#from langchain_openai import ChatOpenAI\n",
+    "from langchain_together import ChatTogether\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "68f87690",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🔁 SRC path already in sys.path: /home/prashant-agrawal/projects/netflix_talk2data/src\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 🔁 Import all tools from registry\n",
     "from tools.enhancer_tools_registry import (\n",
@@ -118,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "cc9905de",
    "metadata": {},
    "outputs": [],
@@ -144,28 +150,37 @@
     "Rules:\n",
     "- Do not ask follow-up questions.\n",
     "- Infer likely meanings when user input is ambiguous.\n",
-    "- Your output should be a standalone, precise query in natural language.\n",
-    "- Do not include explanations or formatting like “Here’s the improved query.”\n",
+    "- Use the tools provided to extract structured metadata from user queries.\n",
     "\n",
     "You have access to the following tools:\n",
     "{tools}\n",
     "\n",
-    "Question: {input}  \n",
-    "Thought: <think about which tool to call first>  \n",
-    "Action: <tool name, from [{tool_names}]>  \n",
-    "Action Input: <JSON or text input for that tool>  \n",
-    "Observation: <its output>  \n",
-    "… (repeat Thought/Action/Observation as needed) …  \n",
-    "Thought: I have all the pieces.  \n",
-    "Final Answer: {{\"enhanced_query\": \"<refined NL query>\",\n",
-    "                \"filters\": <dict of all filters>,\n",
-    "                \"k\": <integer>}}\n",
+    "Use **exactly** this format (no extra text):\n",
+    "\n",
+    "Thought→Action→Observation→Thought→Final Answer \n",
+    "\n",
+    "Question: {input}\n",
+    "\n",
+    "Thought: what to do next\n",
+    "Action: keyword_extractor\n",
+    "Action Input: {input}\n",
+    "Observation: [\"B2B\",\"SaaS\",\"startups\",\"India\"]\n",
+    "\n",
+    "Thought: now extract numeric constraints\n",
+    "Action: extract_numeric_constraints\n",
+    "Action Input: \"5\"\n",
+    "Observation: {{\"k\":5}}\n",
+    "\n",
+    "Thought: I have all I need.\n",
+    "Final Answer:\n",
+    "{{\"enhanced_query\":\"List 5 B2B SaaS startups in India\",\n",
+    "  \"filters\":{{\"industry\":\"SaaS\",\"region\":\"India\"}},\n",
+    "  \"k\":5}}\n",
     "\n",
     "Begin!\n",
-    "\n",
-    "Question: {input}  \n",
-    "{agent_scratchpad}\"\"\"\n",
-    ")\n",
+    "Question: {input}\n",
+    "{agent_scratchpad}\n",
+    "\"\"\")\n",
     "\n",
     "# Format the prompt with tool descriptions and names\n",
     "formatted_prompt = enhancer_agent_prompt_template.partial(\n",
@@ -174,12 +189,16 @@
     ")\n",
     "\n",
     "# 🔧 Define the React-style agent\n",
-    "llm = ChatOpenAI(model=\"gpt-4o\",temperature=0)  # Or use your preferred model\n",
+    "#llm = ChatOpenAI(model=\"gpt-4o\",temperature=0)  # Or use your preferred model\n",
     "\n",
+    "\n",
+    "llm_enhancer = ChatTogether(model=\"mistralai/Mistral-7B-Instruct-v0.2\",\n",
+    "                            temperature=0,\n",
+    "                            api_key=os.getenv(\"together_ai_api_key\"))\n",
     "\n",
     "# Create the agent\n",
     "enhancer_agent = create_react_agent(\n",
-    "    llm=llm,\n",
+    "    llm=llm_enhancer,\n",
     "    tools=enhancer_tools,\n",
     "    prompt=formatted_prompt,\n",
     "    )\n"
@@ -187,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "96e729ef",
    "metadata": {},
    "outputs": [
@@ -198,17 +217,25 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mThought: I should first extract relevant keywords related to the company fields.  \n",
-      "Action: keyword_extractor  \n",
-      "Action Input: \"Find 5 B2B SaaS startups in India\"  \u001b[0m\u001b[36;1m\u001b[1;3m{'industry_sector': ['saas', 'b2b']}\u001b[0m\u001b[32;1m\u001b[1;3mI should extract any numeric constraints from the query.  \n",
-      "Action: extract_numeric_constraints  \n",
-      "Action Input: \"Find 5 B2B SaaS startups in India\"  \u001b[0m\u001b[33;1m\u001b[1;3m{}\u001b[0m\u001b[32;1m\u001b[1;3mI should now compose the filters using the extracted information.  \n",
-      "Action: filter_composer  \n",
-      "Action Input: {\"industry_sector\": [\"saas\", \"b2b\"], \"location\": \"India\"}  \u001b[0m\u001b[38;5;200m\u001b[1;3m{}\u001b[0m\u001b[32;1m\u001b[1;3mFind five B2B SaaS startups located in India.\u001b[0mInvalid Format: Missing 'Action:' after 'Thought:'\u001b[32;1m\u001b[1;3mFind five B2B SaaS startups located in India.\u001b[0mInvalid Format: Missing 'Action:' after 'Thought:'\u001b[32;1m\u001b[1;3mFind five B2B SaaS startups located in India.\u001b[0mInvalid Format: Missing 'Action:' after 'Thought:'\u001b[32;1m\u001b[1;3mI have all the pieces.  \n",
-      "Final Answer: {\"enhanced_query\": \"Find five B2B SaaS startups located in India.\", \"filters\": {\"industry_sector\": [\"saas\", \"b2b\"], \"location\": \"India\"}, \"k\": 5}\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m Thought: what to do next\n",
+      "Action: keyword_extractor\n",
+      "Action Input:\n",
+      "\n",
+      "Find 5 B2B SaaS startups in India\n",
+      "\n",
+      "Observ\u001b[0m\u001b[36;1m\u001b[1;3m{'industry_sector': ['saas', 'b2b']}\u001b[0m\u001b[32;1m\u001b[1;3m Now extract numeric constraints\n",
+      "Action: extract_numeric_constraints\n",
+      "Action Input: \"5\"\n",
+      "Observ\u001b[0m\u001b[33;1m\u001b[1;3m{}\u001b[0m\u001b[32;1m\u001b[1;3m I have all I need.\n",
+      "Final Answer:\n",
+      "{\"enhanced_query\":\"List 5 B2B SaaS startups in India\",\n",
+      "  \"filters\":{\"industry\":\"SaaS\",\"region\":\"India\"},\n",
+      "  \"k\":5}\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "{\"enhanced_query\": \"Find five B2B SaaS startups located in India.\", \"filters\": {\"industry_sector\": [\"saas\", \"b2b\"], \"location\": \"India\"}, \"k\": 5}\n"
+      "{\"enhanced_query\":\"List 5 B2B SaaS startups in India\",\n",
+      "  \"filters\":{\"industry\":\"SaaS\",\"region\":\"India\"},\n",
+      "  \"k\":5}\n"
      ]
     }
    ],
@@ -227,18 +254,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "19cd1f70",
+   "execution_count": 3,
+   "id": "2cda740f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔁 SRC path already in sys.path: /home/prashant-agrawal/projects/netflix_talk2data/src\n"
+      "tgp_v1_PoHC0z_NQ9z7XluCXtUez9Jc-mV8fjDz8hmwVBccGBI\n"
      ]
     }
    ],
+   "source": [
+    "import os\n",
+    "print(os.getenv(\"together_ai_api_key\"))   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8409892b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content=' Hello there! How can I assist you today?' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 11, 'prompt_tokens': 9, 'total_tokens': 20, 'completion_tokens_details': None, 'prompt_tokens_details': None, 'cached_tokens': 0}, 'model_name': 'mistralai/Mistral-7B-Instruct-v0.2', 'system_fingerprint': None, 'id': 'nxaAki5-6UHjtw-94d9988e9cbb4063', 'service_tier': None, 'finish_reason': 'stop', 'logprobs': None} id='run--546ea6ed-fa1c-42d9-9e2f-bdd65f097275-0' usage_metadata={'input_tokens': 9, 'output_tokens': 11, 'total_tokens': 20, 'input_token_details': {}, 'output_token_details': {}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_together import ChatTogether\n",
+    "\n",
+    "llm = ChatTogether(model=\"mistralai/Mistral-7B-Instruct-v0.2\",\n",
+    "                   temperature=0,\n",
+    "                   api_key=os.getenv(\"together_ai_api_key\"))\n",
+    "print(llm.invoke(\"Say hi in one sentence\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0034de40",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "19cd1f70",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from typing import Any, Dict, List, Literal\n",
     "from langchain_core.agents import AgentAction, AgentFinish\n",
