--- a/src/tools/enhancer_agent_tools/keyword_extractor.ipynb
+++ b/src/tools/enhancer_agent_tools/keyword_extractor.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4c0444b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Install the dependencies\n",
-    "%pip install langchain-core"
+    "#%pip install langchain-core"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "bec12974",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "37ccbb16",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'headquarters_city': ['delhi'], 'total_funding_raised_inr': ['over ₹', 'cr', 'raised', '₹', 'crore'], 'revenue_estimate_annual': ['revenue'], 'hiring_status': ['hiring'], 'popular_roles_open': ['engineers']}\n"
+      "{'industry_sector': ['b2b'], 'total_funding_raised_inr': ['million', 'funding', 'cr', 'crore'], 'revenue_estimate_annual': ['revenue'], 'year_founded': ['founded']}\n"
      ]
     }
    ],
@@ -179,7 +179,7 @@
     "if __name__ == \"__main__\":\n",
     "    query = \"\"\"\n",
     "    \n",
-    "    \"Show me companies headquartered in Delhi with revenue over ₹50 crore, hiring engineers, and having raised ₹100 crore.\"\n",
+    "    \"tell me B2B companies with funding over 10 million and revenue less than 5 crore, founded after 2010\"\n",
     "\n",
     "    \"\"\"\n",
     "    print(keyword_extractor_fn(query))"
