--- a/src/tools/enhancer_agent_tools/numeric_extractor.ipynb
+++ b/src/tools/enhancer_agent_tools/numeric_extractor.ipynb
@@ -2,26 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 27,
    "id": "07005cf4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
-    "from typing import Dict, Union\n",
+    "from typing import Dict, Union, Tuple, Optional\n",
     "\n",
     "def extract_numeric_constraints(query: str) -> Dict[str, Dict[str, Union[int, float]]]:\n",
     "    constraints = {}\n",
     "\n",
-    "    patterns = [\n",
-    "        (r\"(?:over|above|more than|greater than)\\s[₹$]?\\s?([\\d,.]+)([a-zA-Z]*)\", \"gte\"),\n",
-    "        (r\"(?:min(?:imum)?|at least)\\s[₹$]?\\s?([\\d,.]+)([a-zA-Z]*)\", \"gte\"),\n",
-    "        (r\"\\b>[₹$]?\\s?([\\d,.]+)([a-zA-Z]*)\", \"gte\"),\n",
-    "        (r\"(?:under|below|less than|smaller than)\\s[₹$]?\\s?([\\d,.]+)([a-zA-Z]*)\", \"lte\"),\n",
-    "        (r\"(?:max(?:imum)?|at most|upto)\\s[₹$]?\\s?([\\d,.]+)([a-zA-Z]*)\", \"lte\"),\n",
-    "        (r\"\\b<[₹$]?\\s?([\\d,.]+)([a-zA-Z]*)\", \"lte\"),\n",
-    "        (r\"between\\s(?:₹|\\$)?\\s?([\\d,.]+)\\s?(cr|crore|million|billion|lakhs|lakh)?\\s?and\\s(?:₹|\\$)?\\s?([\\d,.]+)\\s?(cr|crore|million|billion|lakhs|lakh)?\", \"range\"),\n",
+    "    # Expanded unit patterns for both USD and INR (including plurals and abbreviations)\n",
+    "    unit_pattern = r\"(cr|crore|crores?|c|million|millions?|mil|m|billion|billions?|bil|b|lakhs?|lakh|l)?\"\n",
     "\n",
+    "    # Patterns for currency/amount\n",
+    "    patterns = [\n",
+    "        (rf\"(?:over|above|more than|greater than)\\s*(₹|\\$|usd|inr)?\\s*([\\d,.]+)\\s*{unit_pattern}\\s*(usd|inr)?\", \"gte\"),\n",
+    "        (rf\"(?:min(?:imum)?|at least)\\s*(₹|\\$|usd|inr)?\\s*([\\d,.]+)\\s*{unit_pattern}\\s*(usd|inr)?\", \"gte\"),\n",
+    "        (rf\"\\b>\\s*(₹|\\$|usd|inr)?\\s*([\\d,.]+)\\s*{unit_pattern}\\s*(usd|inr)?\", \"gte\"),\n",
+    "        (rf\"(?:under|below|less than|smaller than)\\s*(₹|\\$|usd|inr)?\\s*([\\d,.]+)\\s*{unit_pattern}\\s*(usd|inr)?\", \"lte\"),\n",
+    "        (rf\"(?:max(?:imum)?|at most|upto)\\s*(₹|\\$|usd|inr)?\\s*([\\d,.]+)\\s*{unit_pattern}\\s*(usd|inr)?\", \"lte\"),\n",
+    "        (rf\"\\b<\\s*(₹|\\$|usd|inr)?\\s*([\\d,.]+)\\s*{unit_pattern}\\s*(usd|inr)?\", \"lte\"),\n",
+    "        (rf\"between\\s*(₹|\\$|usd|inr)?\\s*([\\d,.]+)\\s*{unit_pattern}\\s*(usd|inr)?\\s*and\\s*(₹|\\$|usd|inr)?\\s*([\\d,.]+)\\s*{unit_pattern}\\s*(usd|inr)?\", \"range\"),\n",
+    "    ]\n",
+    "\n",
+    "    # Patterns for employees (plain numbers)\n",
+    "    emp_patterns = [\n",
+    "        (r\"(?:over|above|more than|greater than)\\s*([\\d,]+)\\s*(employees|staff|team size|headcount)\", \"gte\"),\n",
+    "        (r\"(?:min(?:imum)?|at least)\\s*([\\d,]+)\\s*(employees|staff|team size|headcount)\", \"gte\"),\n",
+    "        (r\"\\b>\\s*([\\d,]+)\\s*(employees|staff|team size|headcount)\", \"gte\"),\n",
+    "        (r\"(?:under|below|less than|smaller than)\\s*([\\d,]+)\\s*(employees|staff|team size|headcount)\", \"lte\"),\n",
+    "        (r\"(?:max(?:imum)?|at most|upto)\\s*([\\d,]+)\\s*(employees|staff|team size|headcount)\", \"lte\"),\n",
+    "        (r\"\\b<\\s*([\\d,]+)\\s*(employees|staff|team size|headcount)\", \"lte\"),\n",
+    "        (r\"between\\s*([\\d,]+)\\s*(employees|staff|team size|headcount)\\s*and\\s*([\\d,]+)\\s*(employees|staff|team size|headcount)\", \"range\"),\n",
     "    ]\n",
     "\n",
     "    field_keywords = {\n",
@@ -34,53 +48,70 @@
     "\n",
     "    query_lower = query.lower()\n",
     "\n",
-    "    def normalize_unit(value: str, unit: str) -> float:\n",
-    "        num = float(value.replace(\",\", \"\").strip())\n",
-    "        unit = unit.lower()\n",
-    "        if unit in [\"million\", \"m\"]:\n",
-    "            return round(num * 0.1, 2)\n",
-    "        elif unit in [\"billion\", \"b\"]:\n",
-    "            return round(num * 100, 2)\n",
-    "        elif unit in [\"lakh\", \"lakhs\", \"l\"]:\n",
-    "            return round(num * 0.1, 2)\n",
-    "        elif unit in [\"cr\", \"crore\", \"crores\", \"c\"]:\n",
-    "            return round(num, 2)\n",
-    "        else:\n",
-    "            return round(num, 2)  # Default to crore\n",
+    "    # Currency conversion rates (update as needed)\n",
+    "    CURRENCY_RATES = {\n",
+    "        \"INR\": 1,\n",
+    "        \"USD\": 8300000,  # 1 million USD = 8,300,000 INR\n",
+    "    }\n",
     "\n",
+    "    def parse_currency(symbol1: Optional[str], symbol2: Optional[str]) -> str:\n",
+    "        for s in (symbol1, symbol2):\n",
+    "            if not s:\n",
+    "                continue\n",
+    "            s = s.strip().replace(\"$\", \"USD\").replace(\"₹\", \"INR\").upper()\n",
+    "            if s in (\"USD\", \"INR\"):\n",
+    "                return s\n",
+    "        return \"INR\"  # Default\n",
+    "\n",
+    "    def normalize_unit(value: str, unit: Optional[str], currency: str) -> Tuple[float, str, str]:\n",
+    "        num = float(value.replace(\",\", \"\").strip())\n",
+    "        unit = (unit or \"\").lower()\n",
+    "        # Normalize all unit variants for both INR and USD\n",
+    "        if currency == \"USD\":\n",
+    "            if unit in [\"million\", \"millions\", \"mil\", \"m\"]:\n",
+    "                num = num * CURRENCY_RATES[\"USD\"]\n",
+    "            elif unit in [\"billion\", \"billions\", \"bil\", \"b\"]:\n",
+    "                num = num * 1000 * CURRENCY_RATES[\"USD\"]\n",
+    "            else:\n",
+    "                num = num * CURRENCY_RATES[\"USD\"]  # Assume base is million\n",
+    "        elif currency == \"INR\":\n",
+    "            if unit in [\"cr\", \"crore\", \"crores\", \"c\"]:\n",
+    "                num = num * 10000000\n",
+    "            elif unit in [\"lakh\", \"lakhs\", \"l\"]:\n",
+    "                num = num * 100000\n",
+    "            # else: assume INR base unit\n",
+    "        return round(num, 2), currency, unit\n",
+    "\n",
+    "    # --- Funding/Revenue/Valuation Patterns ---\n",
     "    for pattern, operator in patterns:\n",
     "        for match in re.finditer(pattern, query_lower):\n",
-    "            #print(f\"\\n[Pattern Match] Operator: {operator}, Match: '{match.group()}', Span: {match.start()}-{match.end()}\")\n",
     "            span_start = match.start()\n",
     "            matched_field = None\n",
     "            nearest_keyword = float(\"inf\")\n",
     "\n",
     "            if operator == \"range\":\n",
-    "                val1, unit1, val2, unit2 = match.groups()\n",
-    "                low = normalize_unit(val1, unit1 or \"cr\")\n",
-    "                high = normalize_unit(val2, unit2 or \"cr\")\n",
-    "               # print(f\"→ Extracted range: ₹{low} to ₹{high}\")\n",
+    "                s1, v1, u1, c1, s2, v2, u2, c2 = match.groups()\n",
+    "                currency1 = parse_currency(s1, c1)\n",
+    "                currency2 = parse_currency(s2, c2)\n",
+    "                val1, cur1, unit1 = normalize_unit(v1, u1, currency1)\n",
+    "                val2, cur2, unit2 = normalize_unit(v2, u2, currency2)\n",
+    "                low = val1\n",
+    "                high = val2\n",
     "            else:\n",
-    "                val, unit = match.groups()\n",
-    "                val = normalize_unit(val, unit or \"cr\")\n",
-    "                #print(f\"→ Extracted value: ₹{val} with operator '{operator}'\")\n",
-    "\n",
-    "            #print(f\"[Keyword Search] Searching for closest field near index {span_start}...\")\n",
+    "                s1, v1, u1, c1 = match.groups()\n",
+    "                currency = parse_currency(s1, c1)\n",
+    "                val, cur, unit = normalize_unit(v1, u1, currency)\n",
     "\n",
     "            for field, keywords in field_keywords.items():\n",
     "                for keyword in keywords:\n",
     "                    for m_kw in re.finditer(re.escape(keyword), query_lower, flags=re.IGNORECASE):\n",
     "                        distance = abs(m_kw.start() - span_start)\n",
-    "                        #print(f\"  Checking keyword '{keyword}' for field '{field}' at index {m_kw.start()} → distance {distance}\")\n",
     "                        if distance < nearest_keyword and distance <= 50:\n",
     "                            nearest_keyword = distance\n",
     "                            matched_field = field\n",
     "\n",
     "            if not matched_field:\n",
     "                matched_field = \"total_funding_raised_inr\"\n",
-    "                print(\"⚠️ No matching field found nearby. Falling back to 'total_funding_raised_inr'.\")\n",
-    "\n",
-    "            #print(f\"✅ Matched field: {matched_field}\")\n",
     "\n",
     "            if operator == \"range\":\n",
     "                constraints.setdefault(matched_field, {}).update({\n",
@@ -92,15 +123,31 @@
     "                    operator: val\n",
     "                })\n",
     "\n",
-    "    # 📆 Year-specific fallback extraction\n",
+    "    # --- Employee Patterns ---\n",
+    "    for pattern, operator in emp_patterns:\n",
+    "        for match in re.finditer(pattern, query_lower):\n",
+    "            if operator == \"range\":\n",
+    "                v1, _, v2, _ = match.groups()\n",
+    "                low = int(v1.replace(\",\", \"\"))\n",
+    "                high = int(v2.replace(\",\", \"\"))\n",
+    "                constraints.setdefault(\"number_of_employees_current\", {}).update({\n",
+    "                    \"gte\": low,\n",
+    "                    \"lte\": high\n",
+    "                })\n",
+    "            else:\n",
+    "                v1, _ = match.groups()\n",
+    "                val = int(v1.replace(\",\", \"\"))\n",
+    "                constraints.setdefault(\"number_of_employees_current\", {}).update({\n",
+    "                    operator: val\n",
+    "                })\n",
+    "\n",
+    "    # --- Year Patterns ---\n",
     "    year_after = re.search(r\"(?:after|since)\\s(\\d{4})\", query_lower)\n",
     "    if year_after:\n",
-    "        print(f\"\\n[Year Constraint] Found 'after {year_after.group(1)}'\")\n",
     "        constraints.setdefault(\"year_founded\", {})[\"gte\"] = int(year_after.group(1))\n",
     "\n",
     "    year_before = re.search(r\"(?:before|until|prior to)\\s(\\d{4})\", query_lower)\n",
     "    if year_before:\n",
-    "        print(f\"[Year Constraint] Found 'before {year_before.group(1)}'\")\n",
     "        constraints.setdefault(\"year_founded\", {})[\"lte\"] = int(year_before.group(1))\n",
     "\n",
     "    return constraints\n"
@@ -108,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 29,
    "id": "fde028ab",
    "metadata": {},
    "outputs": [
@@ -116,9 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "[Year Constraint] Found 'after 2015'\n",
-      "{'number_of_employees_current': {'gte': 100.0}, 'revenue_estimate_annual': {'gte': 25.0, 'lte': 75.0}, 'year_founded': {'gte': 2015}}\n"
+      "{'number_of_employees_current': {'gte': 50}, 'revenue_estimate_annual': {'lte': 166000000.0}, 'total_funding_raised_inr': {'gte': 100000000.0, 'lte': 1000000000.0}}\n"
      ]
     }
    ],
@@ -127,9 +172,9 @@
     "if __name__ == \"__main__\":\n",
     "    query = \"\"\"\n",
     "\n",
-    "   \"Find SaaS companies founded after 2015 with revenue between ₹25 crore and ₹75 crore and more than 100 employees.\"\n",
+    "   \"List startups with funding between ₹10 crore and ₹100 crore, revenue less than $20 mil, and above 50 employees.\"\n",
     "    \n",
-    "    .\"\"\"\n",
+    "    \"\"\"\n",
     "    print(extract_numeric_constraints(query))"
    ]
   }
