Structured Tools & Agent

--- a/src/tools/enhancer_tools_registry.ipynb
+++ b/src/tools/enhancer_tools_registry.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c8d22bc8",
    "metadata": {},
    "outputs": [
@@ -46,19 +46,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "75c8502b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tools.enhancer_agent_tools'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;124;03mEnhancer Tools Registry: Register and wrap all enhancer-related tools for agent use.\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlangchain\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Tool\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtools\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01menhancer_agent_tools\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mkeyword_extractor\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m keyword_extractor_fn\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtools\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01menhancer_agent_tools\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnumeric_extractor\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m extract_numeric_constraints\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtools\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01menhancer_agent_tools\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfilter_composer\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m compose_filters\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tools.enhancer_agent_tools'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔁 SRC path already in sys.path: /home/prashant-agrawal/projects/netflix_talk2data/src\n"
      ]
     }
    ],
@@ -66,11 +62,12 @@
     "\"\"\"\n",
     "Enhancer Tools Registry: Register and wrap all enhancer-related tools for agent use.\n",
     "\"\"\"\n",
+    "#from __future__ import annotations\n",
     "from langchain.tools import Tool\n",
     "from tools.enhancer_agent_tools.keyword_extractor import keyword_extractor_fn\n",
     "from tools.enhancer_agent_tools.numeric_extractor import extract_numeric_constraints\n",
     "from tools.enhancer_agent_tools.filter_composer import compose_filters\n",
-    "from __future__ import annotations\n",
+    "\n",
     "\n",
     "from typing import List, Dict, Any\n",
     "from langchain.tools import StructuredTool\n",
@@ -84,13 +81,13 @@
     "    NumericConstraintOutput,\n",
     "    FilterComposeInput,\n",
     "    FilterComposeOutput,\n",
-    "    SingleFilterDict,   # alias used inside FilterComposeInput\n",
+    "      # alias used inside FilterComposeInput\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "139197a0",
    "metadata": {},
    "outputs": [],
@@ -147,19 +144,7 @@
    "execution_count": null,
    "id": "edc99606",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'utils.keyword_extractor'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 14\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Tool  \u001b[38;5;66;03m# ↓ needed only for compose_filters\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# ── your pure‑python helper fns (no LangChain) ─────────────────────────────\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mkeyword_extractor\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m keyword_extractor_fn\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnumeric_constraints\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m extract_numeric_constraints\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfilter_composer\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m compose_filters\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'utils.keyword_extractor'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ────────────────────────────────────────────────────────────\n",
     "# src/tools/enhancer_registry.py\n",
@@ -189,8 +174,7 @@
     "# ═══════════════════════════════════════════════════════════════════════════\n",
     "# 2.  Numeric‑constraint extractor  (string → {field: {gte/lte}})\n",
     "# ═══════════════════════════════════════════════════════════════════════════\n",
-    "def _numeric_constraint_run(\n",
-    "    payload: NumericConstraintInput,\n",
+    "def _numeric_constraint_run(    payload: NumericConstraintInput,\n",
     ") -> NumericConstraintOutput:\n",
     "    raw = extract_numeric_constraints(payload.text)\n",
     "    return NumericConstraintOutput(raw)\n",
